V4.1.0/CHANGELOG.md
# 📋 更新日誌 — 多人遊戲平台

版本命名規則：`V 大版本.小版本.修補版本`
- **大版本**：非常巨大的改動（重寫架構、全新遊戲模式）
- **小版本**：加入新功能、新元件、更動設計邏輯
- **修補版本**：僅修復 Bug，未加入新東西

---


## V 1.0.0 — 初版：故事接龍
> 2026-02-20

首次實作，完整多人故事接龍遊戲。

- 玩家建立房間，透過 6 字元代碼邀請加入
- 回合制 / 計時制兩種模式
- 每位玩家輪流接龍撰寫，其他玩家鎖定等待
- 結局揭示，完整故事一次呈現
- 全繁體中文介面（台灣用語）
- 基於 WebRTC P2P 網路架構 + Firebase 信令伺服器
- 單檔架構（index.html / style.css / main.js）

---

## V 1.0.1 — 故事接龍 Bug 修復
> 2026-02-20

- 修復主持人離線後遊戲崩潰（Host Migration 機制）
- 修正「回合」定義錯誤（一回合 = 每人都寫過一次）
- 修復返回大廳後黑屏問題（Phase Guard）
- 修復提前離場導致故事接龍卡住
- 新增戲劇性故事揭示動畫效果

---

## V 1.0.2 — 跨網路連線修復
> 2026-02-21

- 修復跨網路環境下 WebRTC 無法連線（加入 TURN 伺服器、ICE 候選者排清機制）
- 修復遊戲中途加入破壞遊戲狀態
- 修復 Map.get() nullish 賦值語法錯誤

---

## V 1.1.0 — 架構重寫：WebRTC → Firebase
> 2026-02-21

底層通訊架構全面重寫，解決跨網路連線根本問題。

- 捨棄 WebRTC，改用 Firebase Realtime Database 作為所有通訊媒介
- 消除 Zombie 房間殘留問題
- 實裝觀戰模式：遊戲中途加入自動成為觀戰者
- 房間狀態同步更穩定、延遲更低

---

## V 2.0.0 — 狼人殺模式
> 2026-02-21

加入全新遊戲模式「狼人殺」，架構大幅擴充。

**8 個職業：**
- 🐺 狼人 — 每晚共同選擇獵殺目標
- 👑 狼王 — 被票出局時可帶走一人
- 🔮 預言家 — 每晚查驗一名玩家陣營
- 🧙 女巫 — 解藥（救人）+ 毒藥（殺人）各一瓶
- 🏹 獵人 — 死亡時帶走鎖定目標
- ⚔️ 騎士 — 白天向任意人發起決鬥
- 💣 炸彈客 — 第三方，被全票出局時引爆所有投票者
- 👨‍🌾 村民 — 協助找出並放逐狼人

**遊戲流程：**
- 夜晚：各職業同時進行行動（不互相干擾）
- 白天宣告：公布昨夜死亡玩家
- 討論：自由發言討論
- 投票：選出要放逐的玩家
- 特殊技能：狼王/獵人死後亮牌行動

---

## V 2.0.1 — 狼人殺 Bug 修復（一）
> 2026-02-21

- 修復玩家斷線後遊戲異常
- 修復導航 Bug（返回大廳後狀態殘留）
- 調整獵人機制（改為死後才能發動）
- 調整炸彈客機制（引爆條件更清晰）
- 修復死亡公告顯示不正確
- 隱藏故事接龍作者（防止提示誰是誰）
- 非主持人設定同步即時更新

---

## V 2.1.0 — 投票棄票、死亡介面、觀戰系統
> 2026-02-21

- 新增投票棄票（棄票自動鎖定）
- 死亡畫面視覺全面強化（死亡原因、角色標示）
- 觀戰者模式實裝（可看到所有玩家資訊）
- 修復觀戰者身份判斷邏輯錯誤
- 修復投票結果畫面顯示異常

---

## V 2.1.1 — UI Bug 修復
> 2026-02-22

- 修復觀戰者不應出現職業行動按鈕
- 修復死亡畫面仍顯示遊戲面板
- 修復觀戰標籤在返回大廳後未清除
- 修復炸彈客勝利樣式缺失
- 觀戰大廳面板實裝
- 事件委派重構（可靠性提升）

---

## V 2.1.2 — 炸彈客 Bug 修復
> 2026-02-22

- 修復炸彈客勝利判定異常（全票才算）
- 修復引爆未正確觸發（部分票數情況）
- 修復投票邏輯邊界情況（炸彈客不能投自己）
- 修復觀戰面板顯示炸彈客死亡資訊錯誤
- 修復 Firebase 陣列序列化（陣列被轉成物件）
- 修復首頁介面小問題

---

## V 2.2.0 — 首頁重設計、死亡觀戰、新功能
> 2026-02-22

- 首頁全面重新設計（高級感排版）
- 死亡玩家自動轉為觀戰者（可繼續看遊戲）
- 故事接龍：時間剩 ≤3 秒自動鎖定
- 女巫盲救確認機制（不知道被殺的是誰）
- 主持人離線後觀戰退出修復
- Firebase echo 抑制（防止重複觸發）
- 倒計時自動提交保留已填內容

---

## V 2.3.0 — 投票計時器、鎖定機制、夜晚面板
> 2026-02-23

- 投票計時器（20–180 秒可設定，倒數到 0 自動棄票）
- 投票鎖定機制（鎖定後不可更改，需兩步解鎖）
- 討論全員確認制度（全員 Ready 或主持人強制進入投票）
- 被動職業夜晚確認按鈕（村民/炸彈客/騎士需手動確認閉眼）
- 互動月亮小物件（夜晚等待時可點擊玩耍）
- 死亡主持人浮動控制列（主持人死後仍可操控流程）
- 狼王秘密開槍（死後可選擇秘密帶走一人，不公開）
- 騎士亮牌決鬥（白天公開挑戰任意玩家）
- 獵人白天改鎖定目標（可動態更換目標）
- 投票點選取消（再次點選已選對象取消投票）
- 炸彈客夜晚炸彈互動玩具

---

## V 2.3.1 — 狼人殺重大 Bug 修復
> 2026-02-23

- 修復女巫雙解藥（同一夜可連續使用）
- 修復狼王死後可無限開槍
- 修復騎士決鬥結果不對外公開（應全員可見）

---

## V 2.4.0 — 故事接龍 UI 全面升級、修復
> 2026-02-23

**故事接龍介面重設計：**
- 浮動膠囊標題列（房號、玩家數）
- SVG 環形計時器動畫
- 羊皮紙捲軸風格書寫區
- 字數計數環
- 鎖定等待動畫面板
- 漸層故事揭示橫幅
- 完成慶祝彩帶特效

**修復：**
- 騎士決鬥命中橫幅不揭露狼種（統一顯示「命中！決鬥成功！」）
- 修復投票計時器到期自動鎖定卻清除選擇
- 解鎖按鈕移至等待面板（不再被隱藏）

---

## V 2.5.0 — 獵人公開亮牌、夜晚小遊戲
> 2026-02-23

**獵人機制重設計：**
- 獵人亮牌改為全員可見的公開舞台（類似狼王，非私下操作）
- 被狼殺 / 被票出局均觸發，原因不同後續流程不同
- 亮牌過渡動畫（橙色背景、角色徽章、戲劇性文字）
- 獵人看到目標選擇格；其他人看到等待動畫

**夜晚小遊戲更新：**
- 獵人夜晚：移動靶場射擊遊戲（靶子隨機移動，點擊命中）
- 村民夜晚：接流星節奏遊戲（星星從上方落下，點擊接住）
- 炸彈客夜晚：炸彈互動點擊玩具
- 騎士夜晚：格擋練習小遊戲

---

## V 2.5.1 — 獵人流程 Bug 修復
> 2026-02-24

- 修復獵人卡在死亡畫面無法選擇射殺目標（死亡玩家為特殊相位操作者時需繞過死亡覆蓋層）
- 修復獵人被狼殺後亮牌結束卻切回黑夜（應繼續進入白天討論）
- 新增 `cause` 欄位區分觸發原因（`wolf` = 狼殺→繼續白天；`vote` = 票出→進入下一夜）

---

## V 2.6.0 — 新職業：邱比特 💘
> 2026-02-24

加入第 9 個職業「邱比特」，引入情侶機制與第三方陣營。

**邱比特：**
- 僅在第一個夜晚行動，指定兩名玩家（可包含自己）成為情侶
- 第二夜起自動跳過（不佔用夜晚行動）
- 夜晚有專屬選擇面板（情侶 A / B 卡槽 + 玩家列表）

**情侶系統：**
- 兩位情侶收到私密彈窗通知，告知對方身份
- 一人死亡 → 另一人立刻殉情（不可發動技能）
- 殉情死亡原因顯示「殉情（情侶離去）」

**三種陣營情境：**
| 情況 | 勝利條件 |
|------|----------|
| 兩村民情侶 | 正常村民勝利條件 |
| 兩狼人情侶 | 需屠城（場上≤1名非情侶），判定情侶獲勝 |
| 一狼一村情侶 | 第三方陣營，所有非第三方玩家出局才勝 |

**情侶優先機制：**
- 情侶存活時阻斷所有普通勝利條件（情侶判定優先於所有陣營）
- 情侶雙亡後恢復正常判定
- 結局畫面顯示情侶徽章與第三方勝利橫幅

---

## V 2.6.1 — 邱比特勝利判定修復
> 2026-02-24

- 修復混合情侶（一狼一村）在「一狼一村存活」時被錯誤判定為狼人勝利
- 修復兩狼情侶在「一狼一村情侶存活」時被錯誤判定為狼人勝利
- 重寫 `_checkWin` 邏輯，情侶判定優先於所有陣營勝利
- 兩狼情侶有第三隻額外狼存活時，恢復正常狼人判定
- 情侶雙雙殉情死亡後正確恢復正常判定流程

---

## V 3.0.0 — 新遊戲：規則混亂 🎲
> 2026-03-25

加入全新遊戲模式「規則混亂」。

**每回合流程：**
1. 所有玩家同時撰寫初始句子 + 制定一條規則
2. 系統隨機抽取一條規則作為本回合唯一規則
3. 系統隨機交換句子（保證不拿到自己的句子）
4. 玩家修改拿到的句子使其符合規則
5. 所有人看到所有原句 → 修改句配對
6. 全體玩家對每位玩家的修改評分（違規／普通／超棒）
7. 計算分數，顯示本回合排行
8. 進入下一回合

**積分制度：** ❌ 違規 −2　👍 普通 +1　⭐ 超棒 +4

**結局統計：** 最終排行榜、超棒次數最多玩家、違規次數最多玩家

**技術：** 獨立 ChaosEngine、7 個相位、Derangement 演算法確保沒人修改自己的句子、主持人控制投票時機、完整房間設定面板

---

## V 3.0.1 — 規則混亂大改版
> 2026-03-25

**1. 更名：** 混亂排隊 → 規則混亂

**2. 修復輸入框未清除（第二回合殘留上回合文字）**
使用 `data-round` 屬性記錄玩家最後輸入的回合，切換回合時自動清空句子、規則、修改三個輸入框。

**3. 投票機制大改：逐張揭牌評分**
- 廢棄「Display」與「Vote」兩個分離相位，合併為新的 `vote_reveal` 相位
- 主持人逐一點擊「揭露下一張」，每張揭出後所有人立刻可以評分
- 最新揭出的卡片有入場動畫（彈跳出現）
- 所有卡片揭出 + 全員完成投票後自動進入結果

**4. 新增 Bonus 分（最喜歡）**
- 每張卡片下方新增「💫 最喜歡」按鈕
- 每人只能選一個最喜歡，可隨時更換（不限已揭出的卡片）
- Bonus 票數不計入排名分數，但在回合結果中以 `💫 ×N` 顯示
- 結果顯示獨立的 Bonus 行，不影響名次計算

**5. 結局獎項逐步揭露**
- 主持人點擊「揭露下一個獎項」才顯示
- Step 0：只顯示總分排行榜
- Step 1：揭露「⭐ 最受歡迎」（最多超棒票玩家）
- Step 2：揭露「❌ 最多違規」（最多違規票玩家）

---

## V 3.0.2 — 規則混亂六項修復
> 2026-03-26

**1. 修復投票完成判斷**
重寫 `_tryEndVoteReveal`：改以「鎖定票數」作為主要完成條件，並保留「所有人都投完 + 有 bonus」的自動完成作為備援。讀取最新 store 狀態避免 stale data 問題。

**2. 送出可退掉（解鎖重改）**
寫句子與修改句子兩個階段的「提交」按鈕，在提交後都會出現「↩ 取消提交，重新編輯」按鈕（類似故事接龍解鎖機制）。撤回後輸入框恢復可編輯，不影響其他人。

**3. 規則混亂觀戰模式**
觀戰者進入 `screen-chaos-game` 時顯示獨立觀戰面板，可即時看到：當前相位、回合規則、已揭露的改句配對、即時分數排行。

**4. 投票鎖定按鈕 + Bonus 可取消**
- 所有卡片揭出後，出現「🔒 確認提交評分」鎖定按鈕，鎖定後才計入完成
- 💫「最喜歡」可重複點擊取消（再點一次已選的目標即取消）
- 即時顯示鎖定人數進度

**5. 複製按鈕回饋感**
按下後按鈕短暫變綠色 + 縮放動畫，並顯示 ✓ 符號持續 1.4 秒，確認複製成功。同時新增舊版瀏覽器 `execCommand` 備援。

**6. 空房間自動刪除**
新增 `_registerRoomCleanup`：每位玩家加入時在 `/rooms/<code>/presence/<pid>` 寫入一個 presence 節點，並設 `onDisconnect().remove()`。監聽整個 presence 節點，一旦全部 presence 消失（所有人都斷線），自動刪除整個房間。不再需要最後一人手動按離開。

---

## V 3.0.3 — 規則混亂深度重構
> 2026-03-26

**1. 寫入階段拆分為兩步驟**
- `write_sentence`：先專心寫初始句子
- `write_rule`：再看著自己的句子制定規則（畫面顯示剛才寫的句子作為參考）
- 兩個階段各有獨立倒計時、提交、撤回功能

**2. 撤回全面支援**
- 寫句子、寫規則、修改句子三個階段均可撤回重改
- 提交後顯示「↩ 取消，重新編輯」按鈕

**3. Enter 鍵監聽**
- 所有輸入框支援 Enter 提交（Shift+Enter 換行）

**4. 揭牌機制根本修復**
- 根本 bug：`(g.revealIndex || -1)` 當 revealIndex=0 時 `0||−1=−1`，永遠卡在第一張
- 修正為 `(g.revealIndex !== null) ? Number(g.revealIndex) : -1`

**5. 投票鎖定邏輯重寫**
- 所有牌揭出後才顯示「🔒 確認提交評分」
- 必須對每張卡片（除自己外）都投票才能鎖定
- 全員鎖定後自動結算

**6. 空房間自動刪除根本修復**
- 移除每次呼叫都添加新監聽器的錯誤做法
- 改為在 `_listen()` 中呼叫一次 `_watchRoomEmpty()`
- 每個玩家在 `/presence/<pid>` 寫入節點 + `onDisconnect().remove()`
- `_watchRoomEmpty` 監聽 presence 根節點：所有節點消失時自動刪除整個房間

**7. 複製按鈕平滑動畫**
- 按下 → 縮小（120ms）→ 放大變綠（1.2s）→ 恢復
- 使用 CSS transition，不再是生硬切換

---

## V 3.1.0 — 規則混亂全面升級
> 2026-03-26

**1. 投票機制全重寫：逐卡計時確認**
- 每次只顯示一張改寫卡（全螢幕）
- 計時器改為每張卡片獨立倒數（`voteTime` 秒，可在大廳設定）
- 投票流程：選擇評分（違規/普通/超棒）→ 點「確認此張評分」→ 全員確認後自動進入下一張
- 計時器到期自動推進到下一張

**2. 匿名投票**
- 投票時改寫者顯示為「🎭 神秘改寫者」
- 確認後才揭露真實名字
- 增加懸念與驚喜感

**3. Emoji 即時反應**
- 揭牌時下方有 6 個表情按鈕（😂🔥💀👏😮🤣）
- 點按後表情漂浮顯示，3 秒後消失
- 同步給所有玩家看見

**4. 回合結果更豐富**
- 排行榜下方顯示本回合所有改句配對
- 每對顯示：原作者 → 改句 → 各評分人數統計（⭐×N 👍×N ❌×N）

**5. 空房間自動刪除根本修復**
- 廢除不可靠的 presence 監聽方式
- 改為雙策略：
  - `_watchRoomEmpty` 監聽 `/players` 的 `child_removed`，當玩家節點被刪除時檢查是否清空
  - 主持人建立房間時設 `rooms/<code>.onDisconnect().remove()`（主持人獨自關閉瀏覽器時觸發）
  - 第二位玩家加入時取消房間級 onDisconnect，改由 presence 接管

**6. 大廳設定新增每張投票時限**
- 新增「每張投票時限」設定（10–60 秒）

---

## V 3.1.1 — 規則混亂投票閃爍修復
> 2026-03-26

**閃爍根本修復：DOM diffing 取代 innerHTML 全量重建**

舊做法：每次計時器 tick、投票、反應更新都觸發整個 `grid.innerHTML = ...`，重置 CSS animation，導致畫面每秒閃爍。

新做法：
- **卡片切換時（cardIdx 變化）**：全量重建 innerHTML，並透過 JS 手動添加 `card-enter` class 觸發入場動畫（500ms 後自動移除）
- **同一張牌的更新**：只 patch 變動的 DOM 子節點
  - 評分選擇（`.selected` class toggle）
  - 確認按鈕 visible/hidden
  - 確認人數文字
  - Bonus 按鈕文字/class
  - 改寫者名字揭露
  - 表情按鈕 active state（僅在 myReact 改變時更新）
- **表情反應**：使用 keyed `data-react-pid` 節點，只新增新的反應，不刪除現有的

**表情出現位置改為橫向分散**

舊做法：所有表情在同一個 flexbox 容器疊在一起。

新做法：`chaos-reactions-stage` 使用 `position:relative`，每個表情 span 有 `position:absolute`，left 依照玩家 index 分散在 8%–90% 寬度範圍，實現多個表情同時存在於畫面不同位置的熱鬧效果。

---

## V 3.1.2 — 規則混亂投票 Bug 修復
> 2026-03-26

**問題 1：確認按鈕無法使用**

根本原因：`cvr-confirm-wrap` 被塞在 `grid.innerHTML` 的卡片 scaffold 裡，計時器每秒重建 grid 導致 `btn-chaos-confirm-card` 反覆被刪除再建立，`_on` 的 static binding 找不到它。

修法：將 `cvr-confirm-wrap` 與 `cvr-progress` 移到 HTML 面板的永久位置，卡片切換時用 flag 重置，其餘時間只做 patch 更新。

**問題 2：Emoji 按鈕消失**

根本原因：HTML 裡的 ID 是 `cvr-react-btns-persistent` / `cvr-react-stage-persistent`，但 JS patch 查找的是 `cvr-react-btns` / `cvr-react-stage`，兩邊 ID 不一致，元素永遠找不到。

修法：統一改為無 `-persistent` 後綴的 ID，兩個元素都移到 HTML 面板永久位置，不再放在卡片 scaffold 內。

---

## V 3.1.3 — Emoji 修復 + 狼人殺死亡資訊洩漏修復
> 2026-03-26

**1. Emoji 按鈕修復（初次不出現）**
根本原因：`data-react` 初始值為 `null`，`myReact` 初始值為 `''`，條件 `curMark !== myReact` 中 `null !== ''` → 理論上應執行，但 `.getAttribute()` 未設置時返回 `null`，而比較邏輯用了 `|| ''` 轉換成 `''`，導致 `'' !== ''` 為 false，初始渲染被跳過。修正：改用 `curMark === null`（真正的未設置）作為強制初始渲染條件。

**2. 死亡介面資訊洩漏修復**
問題：獵人被狼殺後，在清晨宣告 → 特殊技能發動前有 4 秒延遲，這段時間獵人看到死亡覆蓋層，可以點擊查看所有玩家職業，影響選擇目標的公正性。
修法：在 `_renderWWDead` 中，若 `isHunterPending` 或 `isWolfkingPending` 為 true，改為顯示「⏳ 等待你的最後技能發動…」提示，完全隱藏職業查看表格。

**3. 獵人 / 狼王可選擇放棄技能**
- 新增 `HUNTER_PASS` 和 `WOLFKING_PASS` action
- 特殊技能面板中，選擇目標格下方新增「🤝 放棄，不帶任何人」按鈕
- 獵人放棄：直接依觸發原因繼續流程（被狼殺→白天討論，被票出→下一夜）
- 狼王放棄：直接進入下一夜，不帶走任何人

---

## V 3.1.4 — Emoji 重複點擊修復 + 防重複加入房間
> 2026-03-26

**1. Emoji 連續點擊修復**

問題：點擊同一個 emoji 後，再點同一個不會有任何效果（按鈕不動、浮動也不出現）。

原因：`_react` 發現 `reactions[pid]` 已等於該 emoji，`Object.assign` 產生完全相同的物件，Firebase 不廣播任何變化，渲染無感知，浮動動畫也不重啟。

修法：若當前 emoji 與點擊的相同，先清除再延遲 50ms 重新射出，讓 stage 上的舊浮動元素被移除，新的重新創建並觸發入場動畫。

**2. 防重複加入 / 建立房間**

問題：按下「建立新房間」或「加入」後，Firebase 非同步操作需要約 0.5–1 秒，這段時間內若再次點擊，會觸發第二次 `createRoom` / `joinRoom`，導致同一玩家出現兩個節點。

修法：
- 新增 `_busy` flag：操作進行中時忽略所有後續點擊
- 新增首頁 Loading Bar：操作開始時顯示流動進度條 + 「建立中…」/ 「加入中…」文字，所有輸入框和按鈕同時 disable
- `finally` 確保無論成功或失敗都會恢復按鈕狀態
- Loading bar 使用純 CSS keyframe 動畫（無 JS 計時器），無閃爍

---

## V 3.1.5 — 規則混亂設定即時同步修復
> 2026-03-26

**問題：** 主持人在大廳調整規則混亂的回合數、寫句子時限、修改時限、每張投票時限後，其他玩家的唯讀設定預覽面板不會即時更新。

**根本原因：** 規則混亂的四個數字輸入框（`chaos-rounds`、`chaos-write-time`、`chaos-modify-time`、`chaos-vote-time`）沒有綁定 `change` 事件，設定只在按下「開始規則混亂」時才讀取並推送。相比之下，故事接龍和狼人殺的設定都有對應的 `change` 監聽器。

**修法：** 新增 `pushChaos()` 函數，四個輸入框任一觸發 `change` 時立即 `pushSettings` 到 Firebase。同時補充觀戰大廳面板的規則混亂設定顯示（包含每張投票時限），並修正非觀戰玩家預覽面板也顯示每張投票時限。

---

## V 3.1.6 — 獵人私密決策、規則混亂倒計時與自動送出、故事接龍鎖定時機修正
> 2026-03-26

**1. 獵人亮牌重設計：先私密決策再公開**

舊流程：死亡 → 直接進入全員可見的公開亮牌特殊相位。

新流程：
- 獵人死後，只有獵人自己看到私密決策面板（其他人看到普通的死亡或遊戲進行畫面）
- 面板顯示：「你要帶走一名玩家嗎？」+ 兩個按鈕
  - 「🏹 是，我要亮牌並帶走一人」→ 觸發全員可見的公開特殊相位（原本行為）
  - 「🤝 否，讓我安靜地離開」→ 靜默死亡，其他人不知道死者是獵人
- 新增 `hunterDecidePending` 狀態（非 phase change），不影響遊戲流程
- 死亡覆蓋層在 `hunterDecidePending` 期間也隱藏職業查看表格（所有死亡方式均適用）

**2. 規則混亂：規則揭曉倒計時**

「規則由 OO 制定 · 5 秒後開始修改…」改為即時倒數顯示（5, 4, 3, 2, 1），計時器在 rule_reveal 階段也顯示於右上角。

**3. 規則混亂：計時到自動送出（Auto-lock）**

寫句子、制定規則、修改句子三個階段，若玩家在計時器歸零時尚未提交，客戶端自動送出輸入框內容（若為空則送出預設文字），與故事接龍的 auto-lock 行為一致。

**4. 故事接龍：鎖定時機修正**

舊行為：計時剩 3 秒時自動鎖定輸入框，玩家以為還有 3 秒可以輸入。

新行為：計時歸零（`timeLeft === 0`）時才自動鎖定，時間用盡才鎖，體驗更直觀。

---

## V 3.1.7 — 獵人亮牌黑屏修復 + 自動鎖定時機修正
> 2026-03-26

**1. 獵人選「亮牌」後全員黑屏修復**

根本原因：`_renderWWHunterDecide` 在 `_renderWWSpecial` **之後**被呼叫。當獵人按「是，我要亮牌」後，`hunterDecidePending` 被清空，`wwPhase` 切換為 `special`。此時 `_renderWWHunterDecide` 看到 `hdp === null` 且 `panel.data-for === 'hunter-decide'`，就把 `ww-panel-special` 清空並隱藏——覆蓋掉了 `_renderWWSpecial` 剛建立的內容。

修法：`_renderWWHunterDecide` 頭部加 `if (g.wwPhase === 'special') return;`，在正式特殊相位期間完全不干預面板。另外只在 `data-for` 尚未設置時才重建 innerHTML，避免重複渲染時閃爍。

**2. 故事接龍 + 規則混亂自動鎖定時機修正**

問題：`timeLeft === 0` 觸發時，主持人端的 timer interval 也在同一 tick 呼叫 `_resolveWrite/Rule/Modify`，兩者競爭 — 客戶端送出 action 可能在相位已切換後才到達，被 guard 條件擋掉。

修法：改為 `timeLeft === 1`（最後一秒）觸發自動送出，給 Firebase 足夠時間在相位切換前處理 action。故事接龍和規則混亂兩處統一修正。

---

## V 3.1.8 — 故事接龍自動切輪 Bug、狼王修復、獎項揭露
> 2026-03-26

**1. 故事接龍：自動鎖定導致下一輪只跑一秒修復**

根本原因：自動鎖定在 `timeLeft === 1` 時觸發 `checkAllLocked` → 排定 `advance()` 在 +900ms。但計時器繼續跑到 `timeLeft === 0`，此時又排定了 `advance()` 在 +3000ms。第一個 900ms advance 正常切換到新回合並啟動新計時器，但 3000ms 的舊 advance 也跑了一次，把新回合立刻推進。

修法：
- `GameEngine._startTimer` 將計時器的 advance 存入 `storyRelay._timerAdvTimer`
- `advance()` 開頭先 `clearTimeout` 兩個 pending timers，再加 phase guard（`if (game.phase !== PHASE.WRITING) return`），確保只執行一次

**2. 狼王：女巫毒死不觸發技能**

狼王被女巫毒殺時，`isWolfkingDeadWithPendingShot` 舊條件只看角色和 `wolfkingSecretReady`，沒有排除女巫毒殺情況。
- 修法一：在判定中加 `wkDeathCause !== '被女巫毒殺'`
- 修法二：`_wolfkingSecret` 引擎方法也加同樣守衛

**3. 狼王：秘密帶走面板新增「放棄」按鈕**

死亡覆蓋層的狼王選人面板，在尚未選擇目標時，加入「🤝 放棄，不帶走任何人」按鈕，與獵人和特殊相位面板行為一致。

**4. 規則混亂：完整揭露獎項前隱藏「返回大廳」按鈕**

`endRevealStep < 2` 時隱藏「← 返回大廳」，確保主持人必須先揭露「最受歡迎」和「最多違規」兩個獎項後，按鈕才顯示。

---

## V 3.2.0 — 聊天室、踢人、守墓人、介面升級
> 2026-04-03

新增多項功能與遊戲內容，全面提升大廳體驗與狼人殺深度。

**1. 大廳聊天室**
- 房間大廳下方新增即時聊天室，遊戲開始前可自由溝通
- Firebase `/rooms/<code>/chat` 即時同步所有訊息（保留最近 50 則）
- 支援 Enter 送出；顯示傳送者名稱，自己的訊息靠右呈現（對話泡泡風格）
- 線上人數徽章即時更新

**2. 主持人踢人功能**
- 主持人在玩家列表中可對任意非自身玩家顯示「✕ 踢出」按鈕
- 有確認視窗避免誤操作
- 被踢出的玩家端顯示提示訊息並自動返回首頁
- 使用 Firebase `onDisconnect` 清理機制，確保踢人後玩家節點即時消失

**3. 規則混亂：最低回合數降至 1**
- 回合數下限從 2 降至 1，支援快速單回合體驗
- 每回合開始時確實清除所有輸入框（句子、規則、修改），防止上一局資料殘留

**4. 複製代碼動畫改版**
- 點擊後圓形 SVG arc 轉動一圈（650ms）→ 切換為綠色勾勾彈跳動畫 → 2.2 秒後恢復
- 複製進行中鎖定防止重複點擊

**5. 提示訊息修復（Toast）**
- 修復加入 / 離開房間、踢人、主持人遷移等系統提示完全無法顯示的問題
- 根本原因：`index.html` 缺少 `<div id="toast">` 元素，JS `toast()` 找不到目標而靜默失敗
- 已在正確位置補上元素

**6. 新職業：守墓人 ⚰️**
- 職業定位：村民陣營，第二夜起可得知「上一白天被投票放逐玩家的陣營」
- 限制：被狼人刀死、女巫毒死、獵人射死者不計入；若無人被投出局，則無任何訊息
- 夜晚顯示歷史案卷列表，最新一筆以紫色高亮標示
- 第一夜（無記錄）自動確認，不阻塞夜晚流程；第二夜起需手動點擊「已閱覽，確認等待」
- 專屬夜晚小遊戲：幽靈驅散（在限時內點擊浮動幽靈，逃走則計失誤）

**7. 夜晚介面全面改版**
- 各職業夜晚面板加入角色主題色漸層背景（狼人紅、預言家紫、女巫綠、獵人琥珀、守墓人靛）
- 夜晚玩具容器統一為響應式寬度（`width: 100%`，最大 300px），高度一致（185px），不再大小不一
- 所有迷你遊戲容器強制填滿玩具框，排版更整齊

---

## V 3.2.1 — 建立 / 加入房間崩潰修復
> 2026-04-03

**根本原因：** `RoomManager._listen()` 中踢人監聽器的清理函式錯誤地呼叫 `this._off.push()`，但 `RoomManager` 沒有 `_off` 屬性（該屬性屬於 `FirebaseTransport`），導致 `Cannot read properties of undefined (reading 'push')` 錯誤，使建立 / 加入房間完全無法運作。

**修法：**
- 將 `this._off.push(...)` 改為 `transport._off.push(...)`，使清理函式正確註冊在 `FirebaseTransport` 的生命週期管理中
- 踢人觸發後改由 UI 層統一執行 `transport.teardown()` + `store.set()` 清理，避免 listener 在舊房間資料下重複觸發

---

## V 3.3.0 — 浮動聊天室、評分系統大改、狼人殺修正、UI 優化
> 2026-04-04

**1. 浮動聊天室**

大廳聊天室改為浮動視窗，預設出現在右下角：
- 可拖曳（滑鼠 / 觸控）自由移動位置
- 標題列點擊「▼ / ▲」按鈕可收合 / 展開內容區
- 點擊「✕」關閉後，右下角出現 💬 按鈕可重新開啟
- 有新訊息時，開啟按鈕出現紅色未讀小圓點
- 進入房間時自動展開，離開或被踢出時自動隱藏

**2. 踢人通知大升級**

被主持人踢出後不再只顯示 Toast，改為全螢幕紅色彈窗：
- 大 🚫 圖示、標題「你被踢出房間」、說明文字
- 按「返回首頁」按鈕關閉彈窗並跳轉

**3. 預言家查驗即時通知**

預言家點選目標後，立即出現類似情侶通知的浮動 Modal：
- 顯示被查驗者的名字
- 結果大字顯示：✦ 好人陣營（綠色）或 ⚠️ 狼人陣營！（橘紅色）
- 點擊「✓ 了解，閉眼等待」確認並讓夜晚繼續流程

**4. 女巫機制修正**

- **一晚只能使用一種藥**：選擇解藥後毒藥會自動取消，反之亦然
- **無法毒自己**：女巫的毒藥目標清單現在排除自身

**5. 規則混亂評分系統大改**

由原本 3 級制（違規 −2 / 普通 +1 / 超棒 +4）改為 5 級制：

| 評分 | 分數 |
|------|------|
| 💀 拉完了 | −500 |
| 🤖 NPC | −100 |
| 👤 人上人 | +100 |
| ⭐ 頂級 | +300 |
| 🔥 夯爆了 | +500 |

- 評分按鈕從 3 顆改為 5 顆，採用自動換行排版
- 回合結果對句統計顯示全 5 種評分次數
- 結局排行榜、獎項顯示全部更新

---

## V 3.3.1 — 七項 Bug 修復
> 2026-04-04

**1. 第4654行誤植 `}` 修復**

V3.3.0 插入預言家 Modal 程式碼時，誤將原本 `if (amSeer && !amDone)` 的開頭條件移除，卻保留了結尾 `}`，導致預言家面板的 seerGrid / seerHistory 渲染程式碼浮於任何條件區塊之外，造成語法與邏輯錯誤。修法：重新補回 `if (amSeer && !amDone) { ... }` 包裹，並確認整個夜晚 seer 渲染結構正確。

**2. 評分按鈕移除分數文字**

評分按鈕標籤（拉完了 / NPC / 人上人 / 頂級 / 夯爆了）後面的括號分數一律移除，避免與下方圖例重複。

**3. 聊天室預設關閉**

進入房間時，浮動聊天室預設為關閉狀態，右下角僅顯示 💬 開啟按鈕，不再自動彈出視窗。

**4. 離開房間時清空聊天內容**

- 按下「← 離開」或被踢出時，聊天訊息列表立即清空
- 進入新房間時重置 `_chatSeenTs` 計數器，Firebase 只重新載入新房間的歷史訊息，舊訊息不會混入

**5. 預言家 Modal 重複彈出修復**

問題：預言家確認查驗後，每次 Firebase 廣播觸發重新渲染都會重新顯示 Modal。修法：在 Modal DOM 元素上儲存 `_ackedRound` flag，玩家點擊「了解，閉眼等待」後設為 `true`；渲染函式改為先檢查此 flag，若已 ack 則不再開啟。每一夜開始（`!amDone`）時自動重置 flag。

**6. 守墓人資訊閃爍修復**

問題：守墓人夜晚面板每次重渲染都重建 `innerHTML`，造成明顯閃爍。修法：在 `gdLog` DOM 上設 `data-log-key`（由 `wwRound + ':' + logArr.length` 組成），只有 key 改變時才重建 HTML，key 未變時跳過，徹底消除閃爍。同時修正原本 `if/else` 邏輯反轉的 Bug（第一夜 / 後續夜晚的訊息顯示邏輯錯誤）。

**7. 規則混亂單回合輸入框無法清除修復**

問題：`_chaosInputReset` 以 `g.chaosRound` 為 key，單局遊戲中 round 一直是 `1`，key 不變所以不清除。修法：為三個輸入框分別使用帶有相位後綴的 key（`chaosRound + '_ws'`、`'_wr'`、`'_mod'`），確保每個相位進入時都能正確清除，即使只有一回合也不例外。

---

## V 3.3.2 — 六項修復與機制更新
> 2026-04-05

**1. 規則混亂輸入框清空根本修復**

根本原因：`_chaosInputReset` 以 `chaosRound` 作為 key，但每局遊戲 Round 1 的 key 相同（`'1_ws'`），第二局開始時 `data-round` 已是 `1_ws`，所以 `inp.value = ''` 永遠不會被觸發。
修法：在 `ChaosEngine.startGame()` 新增 `gameStartTs: Date.now()` 欄位，並將其納入 reset key（格式為 `ts_round_phase`），確保每一局的 key 唯一，每場新遊戲必定觸發清空。

**2. 聊天室訊息視窗視覺優化**

- 他人訊息：左側顯示彩色頭像圓圈（顏色由名字雜湊決定，和玩家列表保持一致），名稱以同色字體顯示，泡泡背景為半透明白
- 自己的訊息：靠右對齊，名稱金色，泡泡背景為金色半透明，文字靠右
- 所有訊息新增發送時間（HH:MM 格式）
- 整體改為「頭像 + 名稱 + 時間 + 泡泡」的標準聊天室排版，一眼即知是誰說的

**3. 女巫可得知狼刀目標**

女巫夜晚面板不再隱藏被刀玩家的身份，改為直接顯示目標名字與彩色頭像圓圈，讓女巫能做出有資訊的決策。（此為設計決策調整，使女巫角色更具策略性）

**4. 狼人可自刀**

移除狼人投票時的目標過濾（原本排除所有狼人），現在狼人選票網格包含所有存活玩家，包括自己和同伴，使「自刀」戰術成為可能。

**5. 守墓人全面改版（被動職業化）**

- **每夜都顯示面板與幽靈小遊戲**：第一夜不再是空畫面或自動跳過，而是和後續夜晚一樣顯示完整 UI（只是案卷顯示「尚無記錄」）
- **不再需要按確認按鈕**：守墓人改為完全被動職業（類似騎士、村民），不再阻塞夜晚結束流程，可以在夜晚自由玩幽靈小遊戲直到天亮
- **移除第一夜 pre-confirm**：舊邏輯對第一夜守墓人自動 confirm，現在統一由夜晚流程管理，守墓人永遠不在 `_tryEndNight` 的必要確認清單中

**6. 守墓人案卷閃爍修復（延續 V3.3.1）**

確認 `data-log-key` keyed render 邏輯在去掉 `!amDone` 條件後仍正常運作，不因夜晚計時器每秒廣播而重建 DOM。

---

## V 3.4.0 — 頭像色彩豐富化、聊天優化、規則混亂揭示大改
> 2026-04-05

**1. 聊天室在線人數更新優化**

由「每次收到訊息都更新」改為「文字內容有變動才更新」（對比 `badge.textContent !== newLabel`），避免每則訊息觸發不必要的 DOM 寫入。

**2. 規則混亂終局揭示全面重設計**

- **逐步揭示（最後一名 → 第三名 → 第二名 → 第一名 → 特別獎）**：主持人每按一次按鈕，揭示一位玩家的名次與分數，從最後一名開始，最後才揭示第一名，製造戲劇感
- **按鈕標籤動態顯示**：「✦ 開始揭示名次！」→「▶ 揭示下一位…」→「🥉 揭示第三名！」→「🥈 揭示第二名！」→「🥇 揭示第一名！！」→「⭐ 揭示最佳獎項」→「💀 揭示最差獎項」
- **名次入場動畫**：每位新揭示的玩家有彈跳入場動畫；第一/二/三名有金/銀/銅特殊高亮框
- **回合結果頁面改版**：
  - 排行改以「本回合得分」排序（非總分），只顯示各人本回合加減分
  - 每人的總分欄位：**自己看得到自己的總分**，看其他人顯示「總分 ???」，保留最終揭示的懸念

**3. 頭像顏色大幅擴充（8 → 36 色）**

原本 8 色擴充至 36 色，分三組：
- **鮮豔組（12 色）**：珊瑚紅、金橙、翠藍、亮紫、玫紅、薄荷綠、活橙、寶藍、螢粉、天藍、碧綠、金黃
- **中間色組（12 色）**：沿用原有色並補充更多中飽和度色彩
- **暗色組（12 色）**：深紫、深藍、深紅、森綠、夜藍、土黃、暗紫、深青、棕橘、靛藍、草綠、暗玫

大幅降低不同玩家撞色機率，聊天室、玩家列表、頭像一致。

---

## V 3.4.1 — 房主斷線踢人 Bug 修復、誤踢 Bug 修復、規則揭曉縮短
> 2026-04-05

**1. 房主斷線導致所有人被踢 — 根本修復**

根本原因：`createRoom()` 對 Firebase 登記了 `rooms/<code>.onDisconnect().remove()`。當 `addPlayer()` 由非房主客戶端呼叫 `onDisconnect().cancel()` 時，此 cancel 只作用在「呼叫者自己的 WebSocket 連線」上，無法取消房主連線上已登記的 onDisconnect。因此，當房主瀏覽器關閉時，Firebase server 仍會執行房主連線上的 `rooms/<code>.remove()`，刪除整個房間（包含所有玩家節點），導致每位玩家的踢人偵測觸發。

修法：
- 完全移除 `rooms/<code>.onDisconnect().remove()`
- 房間清理改由 `_watchRoomEmpty`（監聽 `/players` child_removed，所有玩家都不在才刪房間）負責

**2. 玩家無故顯示「你被房主踢出房間」— 根本修復**

舊實作的踢人偵測：監聽 `rooms/<code>/players/<myId>` 的 `value` 事件，節點消失即視為被踢。此節點在以下情況也會消失，導致誤判：
- Firebase 連線中斷（`onDisconnect` 觸發）→ 重連後 `watchReconnect` 恢復，但這段短暫消失足以觸發
- 房主斷線後整個房間被刪（已由 Fix 1 解決）

新實作：改用專屬的 `/rooms/<code>/kicked/<pid>` 節點：
- 此節點**只有在主持人明確執行踢人操作時才被寫入**
- 斷線、重連、房間結構變動皆不會觸發
- `transport.watchKicked()` 監聽此路徑，`transport.kickPlayer()` 寫入此路徑

**3. 規則揭曉停頓從 5 秒縮短為 3 秒**

`_resolveWriteRule()` 中的倒計時從 `5` 改為 `3`，節奏更緊湊，減少等待感。

---

## V 3.5.0 — 邱比特夜晚小遊戲、炸彈客小遊戲改版、私訊聊天室
> 2026-04-06

**1. 邱比特夜晚小遊戲（第二夜起）**

邱比特在射箭確認情侶後（第二夜開始），不再只是等待，而是顯示專屬「箭術練習場」小遊戲：
- 愛心（💗💓💞💖❤️🩷💝）從頂端隨機落下
- 點擊愛心即射箭命中，錯過則計失誤
- 計分顯示「💘 命中：N」與「💔 失誤：N」
- 愛心落下動畫與點擊爆開動畫

**2. 炸彈客夜晚小遊戲改版**

舊版：點一下炸彈，顯示一句話。
新版：「導火線充能」引爆遊戲：
- 點擊炸彈充能，每次 +12%，進度條顯示充能狀態
- 充能量影響炸彈旋轉速度與標籤顏色（綠→黃→橙→紅）
- 滿格（100%）自動引爆：炸彈變成 💥，向外炸出 10 個 emoji 粒子，0.9 秒後復原繼續充能
- 統計「點擊次數」與「引爆次數」

**3. 私訊聊天室（悄悄話）**

新增獨立的私訊聊天視窗，浮動於大廳聊天室上方：
- 右下角 🤫 按鈕開啟，支援拖曳移動與收合
- 開啟後先顯示玩家選擇列表，選擇後進入雙人私聊
- 可點「← 換人」回到選擇頁切換對象
- 訊息儲存於 Firebase `/rooms/<code>/dm/<sorted_pid_pair>`，雙方皆可查看歷史訊息
- 收到新私訊時，🤫 按鈕出現紅色未讀圓點
- 私訊泡泡為淡紫色，與公開聊天（淡金）視覺區隔明確

---

## V 3.5.1 — 聊天室整合 + 三項私訊修復 + 炸彈爆炸特效升級
> 2026-04-06

**1. 大廳聊天室與私訊整合為單一浮動視窗**

原本兩個獨立按鈕（💬 大廳、🤫 私訊）合併為單一面板，右下角只有一個 💬 按鈕：
- 面板內有「💬 大廳」與「🤫 私訊」兩個標籤頁，點擊切換
- 私訊標籤收到新訊息時在標籤旁出現紅點；面板關閉時在按鈕上出現紅點
- 支援拖曳、收合（▼/▲）、關閉
- 整體視覺更一致，節省螢幕空間

**2. 私訊聊天室 — Bug 修復（三項）**

**Bug 1：收到訊息後無法提示**  
根本原因：舊實作在視窗關閉時清除 `_dmTarget`，導致 `isActiveConvo` 永遠為 false，所有訊息都被丟棄而非顯示通知。  
修法：改用 `_dmWatcher` 物件管理 Firebase 監聽器生命週期，監聽器在對話框開著時持續接收；只在明確切換對象或離開房間時才停止。未讀訊息改在 DM 標籤頁上顯示紅點。

**Bug 2：退出聊天視窗再重進訊息消失**  
根本原因：Firebase 的 `watchDM` 使用 `limitToLast(80)` 重新訂閱時，舊的 `_dmSeenTs` 去重機制會把所有歷史訊息擋掉。  
修法：移除跨 session 的去重邏輯。每次 `_openDMWith` 呼叫時直接清空訊息容器並重新載入，讓 Firebase 的 `child_added` 自然帶回歷史訊息。

**Bug 3：有時無法傳送**  
根本原因：多個地方並行管理 `_dmTarget`，在 `_dmWatcher` 尚未設置而 `_dmTarget` 已被清除的時間差內，送出操作的 guard 判斷失敗。  
修法：統一由 `_openDMWith()` 設置 `_dmTarget`，送出邏輯只依賴 `_dmTarget`；`_closeDMConvo()` 不再停止 watcher（讓背景繼續接收通知），只清空 UI 並切回 picker。

**3. 炸彈客爆炸特效升級**

- **衝擊波環（shockwave ring）**：爆炸瞬間從炸彈中心向外擴展一個橙色光環，從 scale(0) 擴張到 scale(4) 後消失
- **螢幕閃光**：玩具背景短暫變成橙紅色（200ms flash）
- **炸彈放大**：爆炸瞬間炸彈縮放至 scale(2) 再重置
- **12 顆物理粒子**：使用 CSS custom properties `--bom-dx/--bom-dy` 精確計算每顆粒子的飛行向量，以 30° 為間隔向外散射
- 粒子素材：💥🔥💨⚡🌋✨🔴🟠，飛行後漸出消失

---

## V 3.5.2 — 私訊三項修復 + 規則混亂修改預填原句
> 2026-04-06

**1. 私訊重進後對話內容消失 — 根本修復**

根本原因：`_openDMWith` 每次都無條件停止舊 watcher 並清空訊息，導致按 ← 回到 picker 再點同一個人時，Firebase 重新訂閱並 replay 歷史，但這個過程在視窗關閉期間沒有渲染。

修法：  
- `_openDMWith` 新增 **相同目標短路**：若 `_dmWatcher.targetId === targetId`，直接顯示 convo 並滾到底部，不重建 watcher、不清空訊息
- 只有切換到不同對象時才停止舊 watcher 並清空
- `_closeDMConvo`（← 換人）**不再清空訊息容器**，只切換 UI 視圖，watcher 繼續在背景執行

**2. 私訊紅點提示無法觸發 — 根本修復**

根本原因：`_appendDMMsg` 判斷「是否屬於當前對話」靠 `this._dmTarget`，但 `_closeDMConvo` 把它清為 `null`，所以關掉對話框後所有訊息都被判定為「不屬於任何對話」而跳過渲染與提示。

修法：  
- 採用 `_dmUnreadMap: { pid: count }` 結構，每位聯絡人各自獨立計算未讀數
- `_appendDMMsg` 改用 `_dmWatcher.targetId` 判斷訊息歸屬，不依賴 `_dmTarget`
- picker 列表顯示每位玩家旁的紅色未讀數字徽章（`dm-unread-badge`）
- 進入對話時清空該人的未讀計數並刷新 picker 徽章
- `_updateDMDots` 統一管理：DM tab 上的圓點、面板開啟按鈕上的圓點

**3. 規則混亂修改輸入框預填原句**

進入「修改句子」階段時，輸入框自動填入玩家收到的原始句子，讓玩家直接在原句基礎上修改，而非面對空白框。仍使用 `data-round` key 確保每回合只預填一次，不會干擾已提交或正在編輯的內容。

## V 3.5.3 — 私訊紅點通知系統全面重構
> 2026-04-10

**問題一：未開啟聊天視窗時收到私訊，點開後 🤫 私訊 tab 沒有紅點**

雙重根本原因：
1. 私訊通知完全依賴「對話 watcher（watchDM）」。若玩家沒有開過某人的對話，根本沒有 Firebase 監聽器，對方傳訊息時沒有任何機制觸發紅點。
2. 即使已計入未讀，`openBtn` 點擊時會無條件執行 `dmDot.classList.add('hidden')`，直接把 dm-tab-dot 隱藏掉。

修法：
- 新增 `dm_inbox` 通知路徑（`/rooms/<code>/dm_inbox/<toId>/<fromId>`）：進入房間時先清除舊通知再監聽（`initDMInbox`），傳送私訊同步寫入對方 inbox（`writeDMInbox`），開啟對話時清除（`clearDMInbox`）。無論玩家在哪個畫面，收到私訊都能觸發紅點。
- 修正 `openBtn` 點擊：移除無條件隱藏 `dm-tab-dot`，改呼叫 `_updateDMDots()` 根據實際狀態渲染。

**問題二：關閉視窗時停留在對話中，重開後看不到新訊息**

根本原因：`_openDMWith` 有短路邏輯——若 watcher 仍在監聽同一對象直接 scrollTop。但 `_appendDMMsg` 只在面板開啟時才渲染到 DOM，面板關閉後訊息只進未讀堆不寫 DOM，重開時短路讓舊 DOM 呈現。

修法：移除短路邏輯，每次進入對話一律停止舊 watcher、清空 DOM、重建 Firebase 監聽。`limitToLast(80)` 自然 replay 所有歷史。

**附帶改善：** `_closeDMConvo` 停止 watcher；切換 DM tab 呼叫 `_updateDMDots()` 而非無條件隱藏。

---

## V 3.6.0 — 新職業：隱狼 🌫️
> 2026-04-11

加入第 11 個職業「隱狼」，引入金水偽裝與孤狼覺醒機制。

**隱狼規則：**

| 規則 | 說明 |
|------|------|
| 所屬陣營 | 狼人陣營（與狼人共進退） |
| 預言家查驗 | 顯示「好人」（金水被動，天生偽裝） |
| 夜間投票 | 不參與狼人刀人投票，不入狼窩 |
| 隊友可見度 | 隱狼知道所有狼隊友；狼隊友不知道誰是隱狼 |
| 初始狀態 | 無開刀權，不參與夜間殺人環節 |
| 覺醒條件 | 場上所有普通狼／狼王全部出局後，下一夜覺醒 |
| 覺醒後 | 每晚可獨自決定刀一名玩家（孤狼模式） |
| 騎士決鬥 | 被騎士挑戰視為狼人，出局（hit） |
| 守墓人認定 | 被投票出局後，守墓人看到「狼人陣營」 |
| 遊戲繼續 | 隱狼存活時即便其他狼全出局，遊戲不結束 |

**技術實作：**
- `ROLES.hiddenwolf`：team:'wolf'，但 `_seerCheck` 中因 roleId ≠ 'wolf'/'wolfking'，自然返回 'good'（金水效果）
- `_startNight`：每夜計算覺醒（`aliveNormalWolves.length === 0`），未覺醒時自動 pre-confirm 跳過行動阻擋
- `_hiddenwolfShoot / Pass / Confirm`：覺醒後三個行動，刀人結果顯示「被狼人獵殺」（隱藏 hw 身份）
- `_checkWin` / `isWolf`：包含 hiddenwolf，hw 存活時不觸發村民勝利
- `_knightChallenge`：hiddenwolf 被視為 wolf（命中）
- `_cupidConfirm`：hiddenwolf 被視為 wolf（影響情侶陣營判定）
- 結局畫面：隱狼顯示「🌫️ 金水偽裝」標籤

**夜晚面板：**
- 未覺醒：狼隊友狀態列表（存活/死亡標示）+ 月亮互動玩具 + 等待提示
- 覺醒後：震撼覺醒橫幅（紫色光暈動畫）+ 選人刀格 + 確認刀人／放棄按鈕

## V 3.6.1 — 隱狼五項修復 + 私訊重開訊息消失修復
> 2026-04-11

**1. 隱狼選人 onclick 引號 Bug**
根本原因：`targetId:'' + pid + ''` 中單引號與 HTML 屬性的單引號衝突，導致 `onclick` 字串解析失敗。修法：改為 `targetId:\'' + pid + `\'`，加兩層跳脫確保正確傳值。

**2. 隱狼未覺醒時不應進入「確認等待」頁面**
根本原因：`_show('ww-night-hiddenwolf', amHiddenWolf && !amDone)` 在隱狼 pre-confirm（`nightConfirmed[hwPid] = true`）後 `amDone` 變成 true，面板隱藏，玩家被推入 waiting 場景。
修法：
- 改為 `_show('ww-night-hiddenwolf', amHiddenWolf)`，永遠顯示隱狼專屬面板（類似守墓人）
- `ww-night-waiting` 條件加入 `!(amHiddenWolf && !g.hiddenwolfAwakened)` 排除，未覺醒時不顯示等待畫面

**3. 女巫看不到隱狼刀人目標**
根本原因：女巫 UI 完全依賴 `g.wolfTarget`，但隱狼覺醒後的刀人存放在 `g.hiddenwolfShot`，女巫畫面永遠顯示「等待狼人確認目標中」。
修法：新增 `effectiveKillTarget = g.wolfTarget || (g.hiddenwolfAwakened && g.hiddenwolfShot ? g.hiddenwolfShot : null)`，女巫看到的是受害者本人（不知道是誰刀的），保持身份隱匿。同時 `witchSave` 現在也能阻擋隱狼刀人（`_resolveNight` 加入 `&& !g.witchSave` 條件）。

**4. 隱狼在設定面板位置移至狼人與狼王之間**
調整 `index.html` 角色計數器順序：狼人 → 隱狼 → 狼王 → 其他職業。

**5. 私訊：直接關閉聊天視窗（未按 ← 換人），重開後訊息不顯示**
根本原因：關閉按鈕（✕）只設 `_chatOpen = false`，watcher 仍在背景運作。新訊息抵達時 `_appendDMMsg` 判斷 `convoVisible = false`（面板關閉），訊息不寫入 DOM，只計未讀。重開時因 watcher 仍存在觸發「相同目標短路」，直接 scrollTop 而非重載，舊 DOM 缺少訊息。
修法：
- `closeBtn` 點擊時若在 DM 對話中，停止 watcher（保留 `_dmTarget` 記錄位置）
- `openBtn` 重開時若 `_dmTarget !== null`，呼叫 `_openDMWith` 做完整 Firebase reload（`limitToLast(80)` 帶回所有訊息含關閉期間新訊息）

---

## V 3.6.2 — 隱狼三項修復 + 私訊紅點通知系統重建
> 2026-04-12

**Bug 1：隱狼未覺醒時面板是黑畫面**

根本原因：渲染條件為 `if (amHiddenWolf && !amDone)`，但 `_startNight` 中隱狼被 pre-confirm（`nightConfirmed[hwPid] = true`），使 `amDone = true`，導致整個內容區不渲染 → 黑畫面。

修法：條件改為 `if (amHiddenWolf)`，並在內部以三個分支處理所有狀態：
- **未覺醒（amDone=true but not awakened）**：顯示狼隊友狀態列表 + 月亮互動玩具
- **覺醒且未確認**：顯示震撼覺醒橫幅 + 選人刀格 + 確認/放棄按鈕
- **覺醒且已確認**：顯示「✓ 已確認行動，等待天亮」

**Bug 2：隱狼無法使用確認鍵讓女巫看到狼刀**

根本原因：`effectiveKillTarget` 使用 `g.hiddenwolfShot`（選擇目標時就設定），導致女巫在 hw 按下晶片的瞬間就看到受害者，且確認按鈕因 `disabled` 邏輯問題無法正常使用。

修法：`effectiveKillTarget` 改為 `g.hiddenwolfDone && g.hiddenwolfShot`，只有 hw 按下「確認刀人」後，女巫才能看到被刀目標（身份仍隱匿）。

**Bug 3：私訊紅點通知系統（全面重建）**

問題：收到私訊時不顯示紅點；直接關閉聊天視窗後重開無法顯示通知。

根本原因（雙重）：
1. 現有程式碼完全沒有「對話外通知」機制——私訊通知完全依賴 `watchDM`，若沒有開過某人的對話就沒有 watcher，訊息到達時無任何機制觸發紅點。
2. 直接關閉視窗（不按 ← 換人）時 `_dmTarget` 保留，`_activeTab` 仍為 `'dm'`，reopening 時重進同一對話，新訊息若在關閉期間到達因 `convoVisible=false` 而不寫 DOM，同時 `_dmUnreadMap` 也不計數。

修法（三層）：
- **新增 `dm_inbox` 通知路徑**（Firebase `/dm_inbox/<toId>/<fromId>`）：傳送時寫入（`writeDMInbox`），進入對話時清除（`clearDMInbox`），進房間後以 `startAt(joinTs)` 啟動監聽（`watchDMInbox`），避免歷史殘留通知。
- **`closeBtn` 關閉時立即導正**：切換 `_activeTab='public'`、停止 DM watcher、重置 `_dmTarget=null`、UI 切回公開聊天、呼叫 `_updateDMDots()` 更新紅點。重開面板時自然落在公開聊天，DM 紅點正確顯示。
- **`openBtn` 修正**：移除無條件清除 `dm-tab-dot` 的行為，改由 `_updateDMDots()` 根據實際未讀狀態決定。

---

## V 4.0.0 — 新遊戲：故事崩壞中 📝
> 2026-04-13

本版本為大版本，加入全新遊戲模式「故事崩壞中」（Mad Libs 瘋狂填詞）。

**遊戲玩法：**

系統從模板池隨機抽出一篇故事，故事有 Q 個空格，每格附一個填詞提示（如「一個人名」「一種動物」）。玩家**完全看不到故事本文**，只看到自己的提示，填詞後由系統彙整成一篇荒謬故事，並由主持人一格一格揭示。

**回合分配演算法：**

| 輪次類型 | 說明 | 計算公式 |
|----------|------|----------|
| 獨立輪 | 每人拿到不同問題，各填各的格子 | u = floor(Q / (P+1)) |
| 共用輪 | 全員填同一個問題，系統隨機選一份填入 | s = Q − u × P |
| 輪次順序 | 隨機混合穿插 | shuffle([ind×u, shared×s]) |

驗算：Q=12, P=5 → u=2, s=2, 總輪次=4 ✓

**主持人操作：**
- 選擇故事模板（手選或隨機）
- 開始填詞
- 所有人提交後自動進入下一輪
- 填詞結束後，一格一格揭示故事

**3 篇初始故事模板：**

| 模板 | 空格數 | 風格 |
|------|--------|------|
| ⚔️ 勇者的末日冒險 | 12 格 | 奇幻冒險 |
| 💼 史上最慘的上班日 | 11 格 | 職場日常 |
| 🚀 迷航星際探索隊 | 13 格 | 科幻探索 |

**技術架構：**
- `ML_TEMPLATES`：嵌入 JS 常數，方便直接修改
- `MadlibTemplates`：統一存取介面，內建 `loadFromJSON(url)` 接口供未來從外部 JSON 擴充
- `MadlibEngine`：完整遊戲引擎，含 timer、auto-submit（t=1 觸發）、回合分配、隨機選答
- `makeMadlibGame()`：遊戲狀態工廠
- `MADLIB_ACTION`：7 個動作常數
- `_renderMadlib()`：完整 UI 渲染，含模板選擇、答題、揭示、結束四個相位
- 觀戰模式：顯示當前輪次進度，不顯示答題區
- 設定：填詞時限（15–120 秒，預設 45 秒）

**設定面板：**
- 新增「📝 故事崩壞中」遊戲類型按鈕（位於規則混亂右側）
- 首頁模式徽章新增故事崩壞中

---


## V 4.0.1 — 故事崩壞中算法修正 + 黑屏修復 + 細節優化
> 2026-04-14

**1. 回合分配演算法修正**

舊算法（錯誤）：`u = floor(Q/(P+1))`，剩餘全為共用輪。

新正確算法：
- `u = floor(Q/P)`：獨立輪數，每輪每人各答不同問題（覆蓋 u×P 格）
- `r = Q mod P`：剩餘格數
- **升級條件 u >= P/2**（利用分裂輪代替共用輪，提升刺激性）：
  - `splitRounds = floor(r/2)`：每個分裂輪將玩家對半分為 A、B 組，各答不同問題，各自隨機抽一份填入（覆蓋 2 格）
  - `sharedRounds = r mod 2`：若 r 為奇數，多一個全員共用輪（覆蓋 1 格）
- 未觸發升級條件時，r 個剩餘全為傳統共用輪

驗算 Q=15, P=4：u=3 ≥ P/2=2 ✓ → 3 獨立(12格)+1 分裂(2格)+1 共用(1格)=15格，總 5 輪 ✓

**2. 非主持人開局黑屏修復**

根本原因：Firebase 將 JS 陣列（`rounds`、`activePids`、`group_a`、`group_b`）以物件格式儲存（`{0:v,1:v,...}`），`Array.isArray()` 回傳 false，`roundsArr[cr]` 取值失敗 → `round` 為 `undefined` → 渲染提早 return → 黑畫面。

修法：在 `_renderMadlibAnswering`、`_submitAnswer`、`_autoSubmitAll`、`_resolveCurrentRound` 全面加入防禦性正規化（`Array.isArray(x) ? x : Object.values(x || {})`）。

**3. 移除空格編號 `#X` 顯示**

玩家答題區不再顯示「空格 #N」，只顯示提示詞本身，更自然、更沉浸。

**4. 不顯示輪次類型**

答題區只顯示「第 N / M 輪」，不再顯示「獨立輪」「共用輪」「分裂輪」等技術術語。

---


## V 4.0.1 — 故事崩壞中五項修復 + 算法升級
> 2026-04-14

**1. 黑畫面修復（非房主玩家無法看到題目）**

根本原因：`_sync` 中 `if (s.isHost) this._renderMadlib(s)` 使非房主跳過渲染。遊戲啟動後非房主只靠 `GAME_STATE_UPDATED` 事件觸發渲染，但後續計時器 tick 的 `patchGame` 不會觸發該事件，導致畫面停留在初始黑畫面。修法：移除 `isHost` 判斷，讓 `_sync` 對所有玩家執行 `_renderMadlib`。`data-card-key` 守衛已確保輸入框不被干擾。

**2. 回合分配算法升級（分裂輪）**

舊算法（錯誤）：`u = floor(Q/(P+1))` 個獨立輪，剩餘為共用輪。

新算法：
- `u = floor(Q/P)` 個獨立輪，覆蓋 u×P 格
- `r = Q - u×P` 個剩餘格
- 若 `u >= P/2`（獨立輪數達到人數一半）→ 升級 r 的處理方式：
  - `floor(r/2)` 個**分裂輪**（玩家對半分為 A、B 兩組，各組答不同題，各組隨機抽 1 份填入）
  - r 為奇數時 → +1 個**全員共用輪**（所有人答同一題，隨機抽 1 份）
- 否則：r 個共用輪

驗算：Q=15, P=4 → u=3, r=3, u>=2 → 3 獨立 + 1 分裂 + 1 共用 = 5 輪，覆蓋 12+2+1=15 格 ✓

**3. 移除輪次類型顯示**

答題介面只顯示「第 N / M 輪」，不再顯示「獨立輪／共用輪／分裂輪」。

**4. 移除空格 #X 編號顯示**

問題卡片只顯示提示文字，不顯示「空格 #X」。

**5. Firebase 陣列序列化修復**

`g.rounds` 通過 Firebase 時可能被序列化為物件（`{0:..., 1:...}`）而非陣列。修法：所有讀取 `g.rounds[cr]` 與 `g.rounds.length` 的地方改用 `Array.isArray()` 防衛式存取。

---

## V 4.0.2 — 故事崩壞中：開局黑屏修復（非房主看不到題目）
> 2026-04-18

**Bug 描述**

房主按下「開始遊戲」後，其他玩家（非房主）畫面空白、看不到問題，必須等到房主自己送出答案後才會顯示。

**根本原因**

`startGame()` 初始化時 `answers: {}` 與 `submitted: {}` 皆為空物件。Firebase Realtime Database 將空物件視為 `null` 不予儲存，非房主客戶端接收到的 game state 中 `g.submitted` 與 `g.answers` 均為 `undefined`。

`_renderMadlibAnswering()` 直接執行 `g.submitted[cr]`，對 `undefined` 取屬性 → 拋出 `TypeError` → 渲染函數提前中止 → 題目卡片永不顯示。

等到房主送出第一筆答案後，`submitted` 才變為非空物件、Firebase 正常儲存，非房主才得以渲染——這正是「等房主送出後才顯示」的原因。

**修法**

在 `_renderMadlibAnswering`、`_renderMadlibSpectator` 中，所有直接對 `g.submitted[cr]` 與 `g.answers[cr]` 的存取，一律加上 `(g.submitted || {})` / `(g.answers || {})` 防禦層，共修正 5 處：

- 自動送出判斷：`g.submitted[cr0]` → `(g.submitted || {})[cr0]`
- 已送出狀態判斷：`g.submitted[cr]` → `(g.submitted || {})[cr]`
- 進度人數計算：`g.submitted[cr]` → `(g.submitted || {})[cr]`
- 顯示已送出答案：`g.answers[cr]` → `(g.answers || {})[cr]`
- 觀戰者進度顯示：`g.submitted[cr]` → `(g.submitted || {})[cr]`

---

## V 4.0.3 — 故事崩壞中：時間到自動鎖定已輸入文字
> 2026-04-18

**新功能**

計時結束時，系統自動將玩家已輸入但尚未手動送出的答案鎖定提交，不再顯示「（時間到）」字樣。只有 textarea 完全空白的玩家才會被標記為「（時間到）」。

**根本原因（舊行為）**

舊流程在 `t=1` 時，房主端 `_autoSubmitAll()` 先執行，把所有未提交的玩家（含非房主）都強制標記為 `'（時間到）'` 並廣播。非房主客戶端在 `t=1` 時嘗試讀取 textarea，但此時 `submitted[cr][myId]` 已被房主設為 `true`，guard 判斷「已提交」→ 跳過 textarea 讀取 → 玩家正在輸入的文字完全遺失，顯示「（時間到）」。

**修法**

分兩個面向：

1. **房主端（`_startTimer`）**：在 `t=2` 時加入 textarea 擷取邏輯，若房主尚未提交且 textarea 有內容，立即以該內容呼叫 `_submitAnswer()`。空白 textarea 不處理，留給 `t=1` 的 `_autoSubmitAll()` 填入「（時間到）」。

2. **非房主端（`_renderMadlib`）**：將自動提交觸發點從 `g.timeLeft === 1` 提前至 `g.timeLeft === 2`。這給了非房主客戶端約 2 秒（遠超 Firebase 往返延遲 ~100-300ms）讓 action 送達房主並被處理，確保 `_autoSubmitAll()` 執行時玩家已是「已提交」狀態，不會被覆蓋為「（時間到）」。

**行為對照**

| 情況 | 舊行為 | 新行為 |
|------|--------|--------|
| 玩家有輸入文字但未手動送出 | 顯示「（時間到）」 | 自動鎖定並提交已輸入文字 |
| 玩家 textarea 完全空白 | 顯示「（時間到）」 | 顯示「（時間到）」（不變） |
| 玩家已手動送出 | 正常顯示答案 | 正常顯示答案（不變） |

---

## V 4.0.4 — 自動提交：修復提早跳輪與畫面卡住
> 2026-04-18

**Bug 1：時間還有 2~3 秒就跳走（提早結算）**

根本原因：t=2 時 host 捕捉 textarea 並呼叫 `_submitAnswer()`，其內部有「所有玩家都送出 → 立刻 `stopTimer()` + `_resolveCurrentRound()`」的邏輯。只要所有人都完成，round 就在 t=2 時提早結算，玩家感覺「還有幾秒就跳走了」。

**Bug 2：換了下一輪，畫面仍卡在鎖定狀態**

Bug 1 的連鎖效應：round 在 t=2 提早結算後，新 round 的 timer 立刻啟動。新 round 的 timer 跑到 t=2 時，non-host 的 client-side 觸發機制再次觸發，把上一輪未清除的 submitted 狀態誤讀或送出空的 action，和 host 的快速廣播產生競爭，UI 收不到正確的新輪狀態，停在上一輪的鎖定畫面。

**修法（共 3 處）**

1. **`_submitAnswer` 新增 guard**：僅在 `timeLeft > 2` 時允許提早結算。t≤2 時讓 timer 自然跑到 t=0 後由 `_resolveCurrentRound()` 結算，不再因 auto-capture 觸發競爭。

2. **Host textarea 捕捉移回 `t=1`**：不再在 t=2 獨立捕捉，改為在 t=1 的區塊中先捕捉 host textarea（若有內容呼叫 `_submitAnswer`），再呼叫 `_autoSubmitAll()`，確保兩者在同一 tick 完成、順序確定。

3. **Client-side auto-send 加入內容判斷**：只有 textarea 有文字才送出 action；空白 textarea 不送出，讓 host 端 `_autoSubmitAll` 在 t=1 統一標記「（時間到）」。防止空字串 action 干擾 host 狀態或觸發誤判。

**完整時序（修復後）**

```
t=3  玩家繼續輸入…
t=2  Non-host: textarea 有文字 → sendAction(SUBMIT_ANSWER, text)
               textarea 空白   → 不動作（等 _autoSubmitAll）
t=1  Host:  ① 讀自己的 textarea → 有文字 → _submitAnswer(myId, text)
            ② _autoSubmitAll() → 對「仍未提交者」填入「（時間到）」並廣播
t=0  stopTimer(); _resolveCurrentRound() → 推進到下一輪
```

---

## V 4.0.5 — 自動提交：計時到零才鎖定，還原完整倒數體驗
> 2026-04-18

**問題**

V4.0.3 / V4.0.4 的修法在 t=2 或 t=1 提前觸發 auto-submit，導致玩家看到「還有 2 秒」就被鎖定畫面，無法繼續輸入完整時間。

**設計原則（重新確立）**

> 玩家看到幾秒，就能打到幾秒；計時歸零後才鎖定。

**修法（V4.0.5）**

移除所有提前觸發邏輯，改為「t=0 同時觸發，host 等 400ms 視窗收齊 actions 再結算」：

| 時機 | 誰 | 動作 |
|------|----|------|
| t=0，timer tick | Host | 捕捉自己的 textarea（有內容 → `_submitAnswer`） |
| t=0，畫面更新 | Non-host | 讀 textarea（有內容 → `sendAction(SUBMIT_ANSWER)`） |
| t=0 + 400ms | Host | `_autoSubmitAll()`（空白者標「時間到」）→ `_resolveCurrentRound()` |

400ms 遠超 Firebase 正常往返延遲（~50–200ms），足以讓所有 non-host 的 action 抵達並被處理。

**同步移除的舊機制**

- Host：t=1 時的提前捕捉（已移除）
- Non-host：t=2 時的提前 auto-send（改為 t=0）
- `_submitAnswer` 中的 `timeLeft > 2` guard（已移除，恢復原始「全員提交即早結算」邏輯）

---

## V 4.0.6 — 自動提交：修復手動全員送出後下一輪被跳過
> 2026-04-18

**Bug**

若所有玩家在計時歸零前手動送出答案，`_submitAnswer` 偵測到全員完成，呼叫 `stopTimer()` + `_resolveCurrentRound()` 提早結算並開始下一輪計時。但 `stopTimer()` 只清掉了 `setInterval`，t=0 掛上的 400ms `setTimeout` 仍在跑。400ms 後它醒來，對**新的一輪**再次呼叫 `_resolveCurrentRound()`，直接跳過該輪。

**修法**

以 `this._resolveTimer` 追蹤 400ms `setTimeout` 的 handle，並在 `stopTimer()` 中同時 `clearTimeout(this._resolveTimer)`。無論是手動全員提交還是計時自然歸零，`stopTimer()` 被呼叫時都會同時取消尚未執行的 resolve 排程，確保每輪只結算一次。

---

## V 4.0.7 — 自動提交：修復換輪後畫面卡在鎖定狀態
> 2026-04-18

**Bug**

V4.0.6 的 `_resolveTimer` 追蹤機制未能涵蓋一個關鍵情境，導致新輪被跳過、非房主畫面卡在上一輪的鎖定狀態。

**根本原因**

t=0 的執行順序如下：

```
① stopTimer()                        ← 此時 _resolveTimer 仍為 null，clearTimeout 空操作
② _submitAnswer(host, htxt)          ← 若所有非房主已手動提交完畢
     → 全員已提交 → stopTimer()      ← _resolveTimer 仍 null，清不到任何東西
     → _resolveCurrentRound()        ← 新一輪開始，currentRound += 1
③ this._resolveTimer = setTimeout()  ← ★ 在早結算「之後」才被設定，stopTimer 沒機會清它
```

400ms 後 `_resolveTimer` 在「新一輪」上觸發 `_resolveCurrentRound()`，直接跳過新輪。非房主收不到新輪的有效狀態，停在舊輪的鎖定畫面。

**修法**

在設定 `_resolveTimer` 之前，先讀取 `store.get().game` 確認 `currentRound` 是否仍等於 `hcr`（且 `mlPhase === 'answering'`）。若 `_submitAnswer` 已觸發早結算導致 `currentRound` 改變，則跳過 `setTimeout`，不設定 timer。

```js
var afterG = store.get().game;
if (afterG.currentRound === hcr && afterG.mlPhase === 'answering') {
  this._resolveTimer = setTimeout(..., 400);
}
```

---

## V 4.0.8 — 修復換輪後部分玩家卡在鎖定畫面
> 2026-04-18

**Bug**

手動送出答案後停在鎖定畫面的玩家，換輪後畫面不更新，仍顯示「等待其他人…」。

**根本原因：`data-card-key` 設計邏輯錯誤**

舊 key 格式：`cr + ':' + submitted + ':' + myQIdx`

Guard 的用途是防止正在輸入的 textarea 被重建。但舊設計把三種狀態（textarea 輸入中 / 鎖定 / 無題）通通納入同一個 guard，產生錯誤保護：

- 鎖定狀態（`submitted = true`）設完 key 後，guard 開始保護「這個鎖定畫面」
- 換輪後，新輪的 `cr` 不同，理論上 key 不同，應觸發重建
- 但在某些計時器廣播或 Firebase 更新的競爭條件下，render 函數被以舊的 `submitted=true` state 呼叫，key 仍匹配，guard 返回，**卡死在舊的鎖定畫面**

**修法**

Guard 只保護「真正需要保護的狀態」：textarea 輸入中（`!submitted`）。

| 狀態 | 舊行為 | 新行為 |
|------|--------|--------|
| 無題（no-q） | guard 保護 | 每次直接重建，清除 key |
| 鎖定（submitted=true） | guard 保護 | **每次直接重建**，清除 key |
| 作答中（textarea） | guard 保護 | guard 保護（key = `cr:myQIdx`，不含 submitted） |

key 格式同步簡化為 `cr + ':' + myQIdx`（移除 `submitted`），因為 guard 只在 `!submitted` 分支執行，`submitted` 已隱含為 false。

---

## V 4.0.9 — 換輪後仍卡鎖定：根治晚到 action 寫入新輪的問題
> 2026-04-18

**Bug**

換下一輪後，部分玩家的畫面仍停留在「送出答案 / 等待其他人」的鎖定畫面，沒有顯示新一輪的題目與作答區。

**根本原因**

non-host 在 t=0 送出的 `SUBMIT_ANSWER` action **不包含 round index**。host 端的 `_submitAnswer` 永遠以 `store.get().game.currentRound` 決定要寫進哪一輪的 `submitted`。

時序競爭：
```
t=0    non-host 送出 action（帶 Firebase 傳輸延遲）
t=0+400ms  host: _autoSubmitAll → _resolveCurrentRound → 新輪開始（currentRound += 1）
t=0+Xms    action 抵達，X > 400ms（網路延遲）
           _submitAnswer 讀到 currentRound = 新輪
           → submitted[新輪][myId] = true
           → broadcast → non-host 收到新輪但已是鎖定狀態
           → 卡在鎖定畫面，等所有人都送出才結算
```

**修法**

在 `SUBMIT_ANSWER` action 中加入 `roundIdx` 欄位，host 端收到後校驗：

1. **`_submitAnswer(pid, text, roundIdx)`**：新增 roundIdx 參數，若 `roundIdx !== undefined && roundIdx !== cr` 則直接 return，丟棄過期 action。

2. **`_dispatch`**：透傳 `a.roundIdx` 至 `_submitAnswer`。

3. **client auto-submit（t=0）**：`sendAction` 加入 `roundIdx: cr0`。

4. **手動送出按鈕**：`sendAction` 加入 `roundIdx: cr`（由 closure 捕捉，保證是送出當下的輪次）。

host 自身在 t=0 捕捉 textarea 時直接呼叫 `_submitAnswer(myId, text)`（不傳 roundIdx），guard 因 `roundIdx === undefined` 而略過驗證，行為不變。

---

## V 4.0.10 — 自動提交機制全面對齊規則混亂
> 2026-04-18

**改動**

參照「規則混亂」（ChaosEngine）的自動提交設計，將故事崩壞中的計時與自動提交機制全面對齊，移除多版本累積的臨時補丁。

**規則混亂的設計模式（作為參考）**

```
t=1  Client 送出 action（含已輸入文字或預設值）
     ← Firebase 傳輸：~50–300ms，在 t=0 前抵達並被 host 處理完畢
t=0  Host: stopTimer() → onExpire()
          onExpire 填入未提交者的預設值 → 換輪/換階段
```

**故事崩壞中修改前後對比**

| | V4.0.9（修改前） | V4.0.10（修改後） |
|---|---|---|
| Host t=0 | 捕捉自己 textarea → setTimeout(400ms) → _autoSubmitAll → _resolveCurrentRound | 直接 _autoSubmitAll → _resolveCurrentRound（同 Chaos） |
| Client 觸發時機 | t=0 | **t=1**（同 Chaos） |
| Client 空白時 | 不送出（讓 _autoSubmitAll 處理） | **送出 '（時間到）'**（同 Chaos，確保 host 收到完整 submission） |
| roundIdx guard | 保留 | **保留**（雙重保險，防止極端網路延遲） |

**為何移除 setTimeout**

setTimeout(400ms) 是為了等待 non-host action 抵達而設計，但它引入了多個計時器競爭問題（V4.0.6、V4.0.7 均因此引入 bug）。改用 t=1 Client 送出後，action 在 t=0 的 host 解析前有完整 1 秒的傳輸窗口（Firebase 正常延遲 50–300ms），不需要額外等待。

---

## V 4.0.11 — 修復房主自動提交顯示「時間到」
> 2026-04-18

**Bug**

房主使用自動繳交功能時，即使 textarea 有輸入內容，最終答案仍顯示「（時間到）」。

**根本原因**

t=1 的 client auto-submit 條件為 `!isHost && !isSpectator`，刻意排除了房主。房主在 t=0 時才由 `_autoSubmitAll()` 統一處理，但 `_autoSubmitAll` 不讀 textarea，直接對所有未提交者填入「（時間到）」，導致房主已輸入的內容被丟棄。

**修法**

移除條件中的 `!isHost`，改為 `!isSpectator`，讓房主與其他玩家走完全相同的路徑：

```js
// 修前
if (phase === 'answering' && g.timeLeft === 1 && !isHost && !isSpectator)

// 修後
if (phase === 'answering' && g.timeLeft === 1 && !isSpectator)
```

房主呼叫 `madlibEngine.sendAction()` 時，`isHost` 分支走 `bus.emit(EVT.ACTION_RECEIVED, ...)` 本地同步處理，不經 Firebase，無延遲，與規則混亂（ChaosEngine）的設計完全一致。

---

## V 4.0.12 — 加入房間 Toast + 故事崩壞中取消鎖定還原輸入
> 2026-04-29

**1. 新增加入房間成功 Toast**

玩家成功加入房間後，畫面右下角顯示提示訊息：「✅ 成功加入：房間代碼：{代碼}」，方便確認已正確進入目標房間。

**2. 修復 Toast 被「xxx 加入了房間」遮蓋的問題**

根本原因：Firebase `child_added` 事件在監聽啟動時，會把房間內**所有現有玩家**（包含自己）一次性全部 fire，導致自己的節點也被 `_onJoin` 誤判為「別人加入」而觸發 toast，覆蓋掉成功加入的訊息。

修法：
- `watchPlayers` 的 `child_added` callback 新增傳遞 `joinedAt` 欄位
- Store 新增 `joinTs` 欄位，在 `createRoom` / `joinRoom` 時記錄當下時間戳
- `_onJoin` 中，對自己（`id === myId`）的事件：非房主時顯示成功加入 Toast
- `_onJoin` 中，對他人（`id !== myId`）的事件：只有 `joinedAt >= joinTs`（即在我加入之後才進房的人）才顯示「xxx 加入了房間」，過濾掉初始載入的既有成員

**3. 故事崩壞中：取消鎖定後還原已輸入內容**

舊行為：按下「↩ 取消，重新填寫」後，輸入框為全空白，玩家須重新輸入。

新行為：取消鎖定後，輸入框自動填回玩家原本送出的答案內容，讓玩家可直接在原答案基礎上修改，不需重新輸入。

## V 4.0.13 — 修復故事崩壞中切題時舊答案殘留
> 2026-04-29

**Bug 修復：切換到下一題時，前一題的輸入內容未被清除**

根本原因：`data-prev-ans` 屬性原本設計用來在「取消鎖定」後還原同一題的答案，但沒有綁定題目資訊。當玩家送出答案後進入下一題，`submitted` 分支會把答案寫進 `data-prev-ans`，切到下一題重建 textarea 時，這個殘留值被錯誤地填入新題的輸入框。

修法：新增 `data-prev-ans-key`（值為 `roundIdx:questionIdx`），還原答案時先比對 key 是否與當前題目一致，不一致則視為無效並清除，確保 `data-prev-ans` 的作用域嚴格限定在同一題。

## V 4.1.0 — 故事崩壞分題算法重構：最佳適配（Best Fit）
> 2026-04-29

**重構：廢除獨立輪 / 共寫輪 / 分裂輪，改為「獨立輪 + 緩衝輪」架構**

### 新算法公式

```
N = ceil(Q / P)     → 總回合數
u = floor(Q / P)    → 獨立輪數量
r = Q - u × P       → 剩餘題數（0 ≤ r < P）
```

- 若 `r = 0`：全部為獨立輪，不需緩衝輪。
- 若 `r > 0`：新增 1 輪「緩衝輪（buffer）」，將 r 題塞進一輪，確保每位玩家恰好負責一題。

緩衝輪的 slot 分配：

```
k_base = floor(P / r)   → 每個 slot 的基礎人數
m      = P mod r        → 多塞一人的 slot 數量
→ m 個 slot 由 k_base+1 人協作，(r-m) 個 slot 由 k_base 人協作
```

### 協作 slot 的答案選取機制

協作 slot（多人負責同一題）在 resolve 時隨機抽選一位玩家的答案，並採用優先過濾機制：

- **優先池**：排除「（時間到）」與「（空白）」的玩家答案
- **降級**：若全員皆為無效答案，才從全員中抽選

### 廢除的 round 類型

| 舊類型 | 說明 |
|--------|------|
| `split` | 玩家對半分成 A/B 組各答一題 |
| `shared` | 全員答同一題，隨機抽一個 |

兩者統一由 `buffer` 輪的 slot 機制取代，邏輯更一致且覆蓋更多人數組合。
